<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TabLayout
        android:layout_width="match_parent"
        android:id="@+id/tabs_layout"
        android:layout_height="50dp">

    </android.support.design.widget.TabLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_phone"
            android:layout_centerInParent="true"
            android:textColor="@color/black"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/p1_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_1"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            />

        <EditText
            android:id="@+id/current_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/p1_tv"
            android:layout_toEndOf="@id/p1_tv"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <TextView
            android:id="@+id/p2_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_2"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            />

        <EditText
            android:id="@+id/new_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/p2_tv"
            android:layout_toEndOf="@id/p2_tv"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <TextView
            android:id="@+id/p3_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_3"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            />

        <EditText
            android:id="@+id/confirm_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/p3_tv"
            android:layout_toEndOf="@id/p3_tv"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/p4_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_1"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            />

        <EditText
            android:id="@+id/current_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textVisiblePassword"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/p4_tv"
            android:layout_toEndOf="@id/p4_tv"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:onClick="onClick"
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/submit"/>


    </RelativeLayout>

</LinearLayout>