<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        >
        <TextView
            android:id="@+id/file_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_class"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:textSize="@dimen/home_post_n"
            android:textStyle="bold"/>

    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/spin_Layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">


                <Spinner
                    android:id="@+id/branch_c"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:background="@color/spinner"
                    android:layout_height="match_parent">

                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/spin_Layout_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1">


                <Spinner
                    android:id="@+id/year_c"
                    android:layout_width="match_parent"
                    android:textColor="@color/black"
                    android:background="@color/spinner"
                    android:layout_height="match_parent">

                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/spin_Layout_2"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="0dp"
                android:layout_weight="1">


                <Spinner
                    android:id="@+id/sec_c"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:background="@color/spinner"
                    >

                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/row2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/subject"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:textColor="@color/black"
                    android:hint="@string/subject"
                    android:inputType="textMultiLine"
                    android:padding="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row3"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:textColor="@color/black"
                    android:hint="@string/message"
                    android:scrollbars="vertical"
                    android:inputType="textMultiLine"
                    android:padding="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="end">

                    <Button
                        android:id="@+id/uploadData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/red"
                        android:text="@string/upload"
                        android:textColor="#ffffff" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="end">

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="end">

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="end">

                    <Button
                        android:id="@+id/post_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/red"
                        android:text="@string/post"
                        android:textColor="#ffffff" />
                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:id="@+id/file_name"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtPercentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:textSize="30dp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:layout_marginBottom="35dp"
                    android:visibility="gone"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>